fixed homepage logo link; also fixed trending button colors on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -224,6 +224,7 @@ img {
   cursor: pointer;
   padding: 0px;
   margin: 10px 20px;
+  background-color: white;
 }
 
 .trending-show:hover {
